# inline_visitor

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.md  README.md
include/inline_visitor/: inline_visitor.h
tests/: CMakeLists.txt  test_inline_visitor.cpp
